--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -475,7 +475,7 @@
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =12
-                            Text: =ThisItem.'Item_No.'
+                            Text: =ThisItem.'Line_No.'
                             Width: =Parent.TemplateWidth - 150
                             Wrap: =false
                             X: =lbl_InvItemNo.Width
