--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -240,6 +240,129 @@ com_Modal As CanvasComponent:
                                 Y: =0
                                 ZIndex: =2
 
+                    Container13_13 As groupContainer.verticalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutJustifyContent: =LayoutJustifyContent.Center
+                        LayoutMinHeight: =30
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Visible: =true//If(IsBlank(LotNo) && com_Modal.IsInventura, true, false)
+                        ZIndex: =2
+
+                        TextCanvas3_14 As Text:
+                            AutoHeight: =true
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontColor: =
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =80
+                            Size: =20
+                            Text: ="Količina"
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =1
+
+                        "inp_QtyInv As 'Text input'":
+                            Align: ='TextInputCanvas.Align'.Center
+                            Appearance: ='TextInputCanvas.Appearance'.Outline
+                            BasePaletteColor: =
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =0
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =320
+                            OnChange: |
+                                =/*If(
+                                    (!IsNumeric(inp_rezQty_2.Value) && !IsBlank(inp_rezQty_2.Value)) || Value(inp_rezQty_2.Value) < 0,
+                                    Notify(
+                                        "Unesite pozitivan broj.",
+                                        NotificationType.Error,
+                                        2000
+                                    );
+                                    Reset(inp_rezQty_2);
+                                    UpdateContext({potrebnaKolicina: 0}),
+                                    If(
+                                        Value(inp_rezQty_2.Value) > Abs(glr_ProResEntries.Selected.Quantity_Completed),
+                                        Reset(inp_rezQty_2);
+                                        UpdateContext({potrebnaKolicina: 0});
+                                        Notify(
+                                            "Maksimalna količina za isporuku je " & Abs(glr_ProResEntries.Selected.Quantity_Completed),
+                                            NotificationType.Information,
+                                            2000
+                                        ),
+                                        UpdateContext({potrebnaKolicina: Abs(glr_ProResEntries.Selected.Quantity) - inp_rezQty_2.Value})
+                                    )
+                                );*/
+                            Placeholder: =0
+                            Required: =true
+                            TriggerOutput: ="FocusOut"
+                            Type: ="Text"
+                            Value: =Qty_Phys_Inventory
+                            Visible: =true
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =3
+
+                        Container8_4 As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
+                            FillPortions: =0
+                            LayoutAlignItems: =LayoutAlignItems.Center
+                            LayoutDirection: =LayoutDirection.Vertical
+                            LayoutGap: =5
+                            LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
+                            LayoutMode: =LayoutMode.Auto
+                            RadiusBottomLeft: =4
+                            RadiusBottomRight: =4
+                            RadiusTopLeft: =4
+                            RadiusTopRight: =4
+                            Visible: =false
+                            Width: =100
+                            ZIndex: =4
+
+                            ButtonCanvas9_8 As Button:
+                                BorderStyle: =""
+                                DisplayMode: =DisplayMode.Edit
+                                FillPortions: =1
+                                FontSize: =60
+                                Height: =32
+                                Icon: ="ChevronUp"
+                                Layout: ='ButtonCanvas.Layout'.IconOnly
+                                LayoutMinHeight: =32
+                                LayoutMinWidth: =96
+                                OnSelect: =Set(QuantityCompleted, QuantityCompleted + 1);
+                                Width: =96
+                                X: =0
+                                Y: =0
+                                ZIndex: =1
+
+                            ButtonCanvas9_9 As Button:
+                                BorderStyle: =""
+                                DisplayMode: =DisplayMode.Edit
+                                FillPortions: =1
+                                FontSize: =60
+                                Height: =32
+                                Icon: ="ChevronDown"
+                                Layout: ='ButtonCanvas.Layout'.IconOnly
+                                LayoutMinHeight: =32
+                                LayoutMinWidth: =96
+                                OnSelect: =Set(QuantityCompleted, QuantityCompleted - 1);
+                                Width: =96
+                                X: =0
+                                Y: =0
+                                ZIndex: =2
+
                     Container13_10 As groupContainer.verticalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutAlignItems: =LayoutAlignItems.Center
@@ -252,7 +375,8 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        ZIndex: =2
+                        Visible: =!com_Modal.IsInventura
+                        ZIndex: =3
 
                         TextCanvas3_11 As Text:
                             AutoHeight: =true
@@ -373,7 +497,7 @@ com_Modal As CanvasComponent:
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
                         Visible: =!com_Modal.IsInventura
-                        ZIndex: =3
+                        ZIndex: =4
 
                         TextCanvas3_13 As Text:
                             AutoHeight: =true
@@ -508,7 +632,7 @@ com_Modal As CanvasComponent:
                         Width: =Parent.Width
                         X: =0
                         Y: =0
-                        ZIndex: =4
+                        ZIndex: =5
 
                 hrz_ModalFooter As groupContainer.horizontalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -549,7 +673,7 @@ com_Modal As CanvasComponent:
                                         colLines,
                                         'Line_No.' = com_Modal.LineId
                                     ),
-                                    {Qty_Phys_Inventory: inp_rezQty_2.Value}
+                                    {Lot_No: inp_LotNo.Value, Qty_Phys_Inventory: inp_rezQty_2.Value}
                                 ),
                                 Patch(
                                     colEntries,
