--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -661,6 +661,8 @@
     com_InvModal As com_Modal:
         IsInventura: =true
         LineId: =glr_Inv.Selected.'Line_No.'
+        LotNo: =glr_Inv.Selected.Lot_No
+        Qty_Phys_Inventory: =glr_Inv.Selected.Qty_Phys_Inventory
         Quantity: =glr_Inv.Selected.Qty_Phys_Inventory
         QuantityCompleted: =glr_Inv.Selected.Qty_Phys_Inventory
         QuantityNewLOT: =0
