--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -254,7 +254,7 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =If(IsBlank(com_Modal.Qty_Phys_Inventory) && com_Modal.IsInventura, true, false)
+                        Visible: =If(com_Modal.IsInventura, true, false)
                         ZIndex: =2
 
                         TextCanvas3_14 As Text:
