--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -131,7 +131,7 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =If(IsBlank(com_Modal.LotNo) && com_Modal.IsInventura, true, false)
+                        Visible: =If(IsBlank(com_Modal.LotNo), true, false)
                         ZIndex: =1
 
                         TextCanvas3_12 As Text:
@@ -675,7 +675,7 @@ com_Modal As CanvasComponent:
                                         colLines,
                                         'Line_No.' = com_Modal.LineId
                                     ),
-                                    {Lot_No: inp_LotNo.Value, Qty_Phys_Inventory: inp_QtyInv.Value}
+                                    {Lot_No: Text(inp_LotNo.Value), Qty_Phys_Inventory: Value(inp_QtyInv.Value)}
                                 ),
                                 Patch(
                                     colEntries,
@@ -689,8 +689,11 @@ com_Modal As CanvasComponent:
                                     }
                                 )
                             );
+                            Notify(inp_LotNo.Value & " , " & inp_QtyInv.Value & " , " & inp_rezQty_2.Value & " , " & inp_potrebnoQty_2.Value);
                             Reset(inp_rezQty_2);
                             Reset(inp_potrebnoQty_2);
+                            Reset(inp_LotNo);
+                            Reset(inp_QtyInv);
                             /*Patch(
                                 lockedItems,
                                 LookUp(
