--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -2,10 +2,10 @@ com_Modal As CanvasComponent:
     ChildTabPriority: =
     Fill: =RGBA(0, 0, 0, 0)
     Height: =App.Height
-    IsInventura: =false
+    IsInventura: =true
     LineId: ="Text"
-    LotNo: ="Text"
-    Qty_Phys_Inventory: =100
+    LotNo: =
+    Qty_Phys_Inventory: =1005
     Quantity: =100
     QuantityCompleted: =100
     QuantityNewLOT: =100
